--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,14 @@ edition = "2018"
 rust = "1.47"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
 rstest = "0.6.4"
 tinyvec  = { version = "1.0.1", features = ["alloc"] }
+wasm-bindgen = "0.2.68"
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
