--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,21 @@ rstest = "0.6.4"
 tinyvec  = { version = "1.0.1", features = ["alloc"] }
 rand = { version = "0.7", features = ["stdweb", "wasm-bindgen"] }
 wasm-bindgen = "0.2.68"
+serde = { version = "1.0.117", features = ["derive"] }
+serde_json = "1.0.59"
+
+# The `web-sys` crate allows you to interact with the various browser APIs,
+# like the DOM.
+[dependencies.web-sys]
+version = "0.3.45"
+features = ["console"]
+
+# The `console_error_panic_hook` crate provides better debugging of panics by
+# logging them with `console.error`. This is great for development, but requires
+# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
+# in debug mode.
+[target."cfg(debug_assertions)".dependencies]
+console_error_panic_hook = "0.1.6"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
