--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["StephanS <simon.void+github@gmail.com>"]
 description = "a hobby chess engine and wasm boilerplate"
 repository = "https://github.com/simon-void/voidchess_engine_rs"
 edition = "2021"
-rust = "1.57"
+# rust = "1.57" // disabled because of warning 'unused manifest key: package.rust'
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
