--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
+[features]
+default = ["console_error_panic_hook"]
+
 [dependencies]
 rstest = "0.12.0"
 tinyvec  = { version = "1.5.1", features = ["alloc"] }
@@ -19,18 +22,19 @@ wasm-bindgen = "0.2.78"
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 
+# The `console_error_panic_hook` crate provides better debugging of panics by
+# logging them with `console.error`. This is great for development, but requires
+# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
+# code size when deploying.
+# So it's included by default (see [features] section),
+# but excluded in release build (see wasm-pack-and-copy-over_release shell script)
+console_error_panic_hook = { version = "0.1.7", optional = true }
+
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
 [dependencies.web-sys]
 version = "0.3.55"
 features = ["console"]
-
-# The `console_error_panic_hook` crate provides better debugging of panics by
-# logging them with `console.error`. This is great for development, but requires
-# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
-# in debug mode.
-[target."cfg(debug_assertions)".dependencies]
-console_error_panic_hook = "0.1.7"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
