--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "voidchess_engine_rs"
 version = "0.0.1"
 authors = ["StephanS <simon.void+github@gmail.com>"]
 description = "a hobby chess engine and wasm boilerplate"
+license = "MIT"
 repository = "https://github.com/simon-void/voidchess_engine_rs"
 edition = "2021"
-# rust = "1.57" // disabled because of warning 'unused manifest key: package.rust'
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
@@ -18,9 +18,9 @@ default = ["console_error_panic_hook"]
 rstest = "0.12.0"
 tinyvec  = { version = "1.5.1", features = ["alloc"] }
 rand = { version = "0.7.3", features = ["stdweb", "wasm-bindgen"] }
-wasm-bindgen = "0.2.78"
-serde = { version = "1.0.133", features = ["derive"] }
-serde_json = "1.0.74"
+wasm-bindgen = "0.2.79"
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.79"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -33,7 +33,7 @@ console_error_panic_hook = { version = "0.1.7", optional = true }
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
 [dependencies.web-sys]
-version = "0.3.55"
+version = "0.3.56"
 features = ["console"]
 
 [profile.release]
