--- a/docs/src/engine/package.json
+++ b/docs/src/engine/package.json
@@ -5,6 +5,7 @@
   ],
   "description": "a hobby chess engine and wasm boilerplate",
   "version": "0.0.1",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/simon-void/voidchess_engine_rs"
