--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,13 @@ crate-type = ["cdylib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-rstest = "0.12.0"
-tinyvec  = { version = "1.5.1", features = ["alloc"] }
 rand = { version = "0.7.3", features = ["stdweb", "wasm-bindgen"] }
-wasm-bindgen = "0.2.79"
+rstest = "0.12.0"
+rstring-builder = "0.1.4"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
+tinyvec  = { version = "1.5.1", features = ["alloc"] }
+wasm-bindgen = "0.2.79"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
