--- a/docs/src/engine/package.json
+++ b/docs/src/engine/package.json
@@ -13,5 +13,7 @@
   ],
   "module": "voidchess_engine_wasm.js",
   "types": "voidchess_engine_wasm.d.ts",
-  "sideEffects": false
+  "sideEffects": [
+    "./snippets/*"
+  ]
 }
