--- a/workspace/engine/Cargo.toml
+++ b/workspace/engine/Cargo.toml
@@ -10,7 +10,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = { version = "0.7.3", features = ["stdweb", "wasm-bindgen"] }
-rstest = "0.12.0"
+getrandom = { version = "0.2", features = ["js"] }
+rand = { version = "0.8.5"}
+rstest = "0.18.2"
 rstring-builder = "0.1.4"
-tinyvec  = { version = "1.5.1", features = ["alloc"] }
+tinyvec  = { version = "1.6.0", features = ["alloc"] }
